# gaming_website

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile.migrations  PROJECT_PLAN.md  README.md  dev-start.sh  docker-compose.complete-dev.yml  docker-compose.dev.yml  docker-compose.yml  gaming_website.md  pyproject.toml
.github/: copilot-instructions.md
.github/chatmodes/: Learning-Mode.chatmode.md
apps/auth-service/: README.md  pyproject.toml
apps/auth_service/: Dockerfile  README.md  pyproject.toml
apps/auth_service/src/: main.py
apps/auth_service/src/api/: auth.py
apps/auth_service/src/core/: database.py
apps/auth_service/src/schemas/: user_login.py
apps/auth_service/tests/: conftest.py  test_base.py  test_login.py  test_me.py  test_signup.py
apps/frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  jest.config.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
apps/game-service/: Dockerfile  README.md  pyproject.toml
apps/game-service/src/: main.py
apps/game-service/src/api/: igdb.py
apps/game-service/src/core/: config.py
apps/game-service/src/igdb/: auth.py  client.py  schemas.py
apps/game-service/tests/: test_cache.py  test_igdb_cache.py  test_igdb_genres_platforms_cache.py  test_igdb_search_and_batch_cache.py
apps/game_service/: COLLECTIONS_API.md  COLLECTIONS_ENTRY_API.MD  Dockerfile  README.md  pyproject.toml
apps/game_service/src/: main.py
apps/game_service/src/api/: collection_entry.py  collections.py  dependencies.py
apps/game_service/src/core/: database.py
apps/game_service/src/igdb/: auth.py  cache.py  client.py  enums.py  query_builder.py  schemas.py
apps/game_service/src/schemas/: collection.py  collection_entry.py
apps/game_service/src/services/: collection_entry_service.py  collection_service.py
apps/game_service/tests/: conftest.py  test_api_igdb.py  test_base.py  test_igdb.py  test_igdb_cache_extra.py  test_igdb_integration.py  test_igdb_query_builder_integration.py  test_igdb_search_query_builder.py  test_schemas_collection.py  test_schemas_collection_entry.py  test_utils.py
apps/game_service/tests/api/: __init__.py
apps/game_service/tests/api/collection/: __init__.py  test_base.py  test_create.py  test_delete.py  test_get.py  test_list.py  test_update.py
apps/game_service/tests/api/collection_entry/: __init__.py  test_base.py  test_create.py  test_delete.py  test_get.py  test_update.py
apps/game_service/tests/services/collection/: __init__.py  test_base.py  test_create.py  test_delete.py  test_get.py  test_update.py
apps/game_service/tests/services/collection_entry/: __init__.py  test_base.py  test_create.py  test_delete.py  test_get.py  test_update.py
apps/game_service/tests/utils/: __init__.py  test_utils.py
db/: pyproject.toml
db/models/: __init__.py  collection.py  game.py  user.py
db/tests/: __init__.py  test_models.py
gateway/: plan.md
migrations/: env.py
migrations/versions/: 240008c85996_add_collections_and_collection_entries_.py  8ab933b33b7f_add_description_to_collection_and_.py  abd2e860809f_create_users_table.py  c76689959902_create_users_and_games_tables.py  e4165b238dd7_rename_game_title_to_name.py
shared/core/: jwt_utils.py
(+93 files in other folders)
